# DocstribeProject

./: .gitignore  README.md  chatbot.py  final.ipynb  pyproject.toml  requirements.txt
patients/: P001.json
rag/: answer_generator.py  chunker.py  embedder.py  retriever.py  router.py
